--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,11 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
 # Revscriptsys2
 set(VERSION "0.7.0")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 
 # Options
 option(USE_MYSQL "Use MySQL" OFF)
 option(USE_SQLITE "Use SQLite" OFF)
-option(USE_ODBC "Use ODBC" OFF)
-option(USE_PGSQL "Use PGSQL" OFF)
 option(USE_LUAJIT "Use LuaJIT" OFF)
 option(USE_DIAGNOSTIC "Use server diagnostic" OFF)
 option(USE_SKULLSYSTEM "Skull system" ON)
@@ -22,8 +20,6 @@ option(USE_STATIC_LIBS "Static linking" OFF)
 # Status
 message(STATUS "MySQL: " ${USE_MYSQL})
 message(STATUS "SQLite: " ${USE_SQLITE})
-message(STATUS "ODBC: " ${USE_ODBC})
-message(STATUS "PGSQL: " ${USE_PGSQL})
 message(STATUS "LuaJIT: " ${USE_LUAJIT})
 
 message(STATUS "Server diagnostic: " ${USE_DIAGNOSTIC})
@@ -32,7 +28,7 @@ message(STATUS "Skull system: " ${USE_SKULLSYSTEM})
 message(STATUS "Static libraries: " ${USE_STATIC_LIBS})
 
 # Make sure at least one database driver is selected
-if(NOT USE_MYSQL AND NOT USE_SQLITE AND NOT USE_ODBC AND NOT USE_PGSQL)
+if(NOT USE_MYSQL AND NOT USE_SQLITE)
   message(FATAL_ERROR "At least one database driver has to be selected.")
 endif()
 
