--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,12 @@ set(VERSION "0.7.0")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O0 -g3")
 
+# add debug definition
+if(CMAKE_BUILD_TYPE EQUAL "Debug")
+	remove_definitions(-D__DEBUG__ -D__DEBUG_NET_DETAIL__ -D__DEBUG__MOVESYS__ -D__DEBUG_CRITICALSECTION__ -D__DEBUG_HOUSES__ -D__DEBUG_PLAYERS__ -D__DEBUG_SCHEDULER__ -D__DEBUG_SCRIPT_ENVIRONMENT_OBJECTMAP__)
+	add_definitions(-DD__DEBUG__ -D__DEBUG_NET_DETAIL__ -D__DEBUG__MOVESYS__ -D__DEBUG_CRITICALSECTION__ -D__DEBUG_HOUSES__ -D__DEBUG_PLAYERS__ -D__DEBUG_SCHEDULER__ -D__DEBUG_SCRIPT_ENVIRONMENT_OBJECTMAP__)
+endif()
+
 # Options
 option(USE_MYSQL "Use MySQL" OFF)
 option(USE_SQLITE "Use SQLite" OFF)
@@ -29,7 +35,7 @@ message(STATUS "Static libraries: " ${USE_STATIC_LIBS})
 
 # Make sure at least one database driver is selected
 if(NOT USE_MYSQL AND NOT USE_SQLITE)
-  message(FATAL_ERROR "At least one database driver has to be selected.")
+	message(FATAL_ERROR "At least one database driver has to be selected.")
 endif()
 
 # Sources
